LDEV-4440 Almost finished learning and monitoring - needed corrections